# CTFd-rs

./: .dockerignore  .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  bot.Dockerfile  captain-definition-bot  captain-definition-rest-api  deploy.sh  docker-compose.yml  rest-api.Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
bot/: Cargo.toml  README.md
bot/src/: discord_name_provider.rs  lib.rs  main.rs
bot/src/commands/: ctf.rs  htb.rs  mod.rs
ctfdb/: Cargo.toml  README.md
ctfdb/migrations/2021-05-09-081745_ctfs/: down.sql  up.sql
ctfdb/migrations/2021-05-09-081937_challenges/: up.sql
ctfdb/migrations/2021-05-28-120521_scoreboard/: down.sql  up.sql
ctfdb/migrations/2021-06-29-094723_htb-challenges/: down.sql  up.sql
ctfdb/migrations/2021-06-29-115853_htb_challenges/: down.sql  up.sql
ctfdb/migrations/2021-07-01-074558_htb_solves/: up.sql
ctfdb/migrations/2021-07-18-051213_htb_team_rank/: down.sql  up.sql
ctfdb/migrations/2021-10-04-062933_htb_user_id_mapping/: down.sql  up.sql
ctfdb/resources/test/: challenge_categories.json  get_team_members.json  get_user_activity.json  jwt.txt  latest_team_stats.json  list_challenges.json  list_machines.json  login_response.json  recent_activity.json  user_overview.json
ctfdb/src/: ctfd.rs  lib.rs  models.rs  schema.rs
ctfdb/src/ctfd/: api.rs  db.rs  mod.rs  structs.rs
ctfdb/src/ctfs/: db.rs  mod.rs  structs.rs
ctfdb/src/ctfs/ctfd/: api.rs
ctfdb/src/htb/: api.rs  db.rs  mod.rs  structs.rs
ctfdb/tests/: integration_tests.rs
frontend/: README.md  default.conf.template  deploy.sh  frontend.Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: SimpleCard.js
frontend/src/routes/: Board.js  Home.js
frontend/src/styles/: Board.sass
rest-api/: Cargo.toml  README.md
rest-api/src/: main.rs
