[package]
name = "ctf_bot"
version = "0.3.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
failure = "0.1"
ctfdb = { path="../ctfdb" }
futures = "0.3.17"
async-trait = "0.1"
chrono = "0.4"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
    "cache",
]

[dependencies.tokio]
version = "1"
features = ["full"]
