[package]
name = "ctfdb"
version = "0.1.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.7", features = ["mysql", "r2d2", "chrono"] }
failure = "0.1.8"
once_cell = "1.5.2"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
dashmap = "4.0.2"
async-rwlock = "1.3.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For static compilation
[patch.crates-io]
mysqlclient-sys = { git = "https://github.com/pzmarzly/mysqlclient-sys", rev = "acd1b2b" }