[package]
name = "ctfdb"
version = "0.3.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4"
failure = "0.1"
once_cell = "1.8"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dashmap = "4.0"
async-rwlock = "1.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.51"
base64 = "0.13.0"
dotenv = "0.15.0"