[package]
name = "rest-api"
version = "0.1.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
actix-web = "3"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.1"
failure = "0.1.8"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
ctfdb = { path = "../ctfdb" }
chrono = "0.4.19"

# For static compilation
[patch.crates-io]
mysqlclient-sys = { git = "https://github.com/pzmarzly/mysqlclient-sys", rev = "acd1b2b" }