[package]
name = "rest-api"
version = "0.1.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
actix-web = "3"
tokio = { version="1", features=["full"] }
env_logger = "0.9"
failure = "0.1"
actix-cors = "0.5"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version="0.11", features=["json"] }
ctfdb = { path="../ctfdb" }
chrono = "0.4"
